# AmethystXR

./: .clang-format  .gitignore  .gitmodules  Archetecture-Notes.md  Architecture-Notes.md  CMakeLists.txt  CMakePresets.json  Coding-Standards.md  README.md  TODO.md  fix-jetbrains-workspace-linux.sh  fix-jetbrains-workspace-windows.bat
Engine/: CMakeLists.txt  README.md  TODO.md
Engine/assets/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader_mask.frag.spv
Engine/assets/shaders/ui/: element.vert  element.vert.spv  rectangle.frag  rectangle.frag.spv
Engine/include/: axr.h  axr.hpp
Engine/include/axr/: actionSystem.h  application.h  assets.h  axr.h  axrApplication.h  common.h  graphicsSystem.h  inputSystem.h  ioActionSystem.h  ioActionsSystem.h  lifecycle.h  logger.h  logging.h  scene.h  setup.h  test.cpp  test.h  utils.h  vulkanApi.h  windowSystem.h  xrSystem.h
Engine/include/axr-hpp/: actionSystem.hpp  application.hpp  assets.hpp  axrApplication.hpp  common.hpp  flags.hpp  graphicsSystem.hpp  inputSystem.hpp  ioActionSystem.hpp  ioActionsSystem.hpp  logger.hpp  scene.hpp  setup.hpp  test.hpp  utils.hpp  vulkanApi.hpp  windowSystem.hpp  xrSystem.hpp
Engine/include/axr-hpp/common/: callback.hpp  defines.hpp  enums.hpp  eventHandler.hpp  result.hpp  types.hpp  utils.hpp
Engine/include/axr/common/: callback.h  defines.h  defines.h.in  enums.h  eventHandler.h  result.h  types.h  utils.h
Engine/src/: axr.cpp  common.hpp  extensionCollection.hpp  libraryImplementations.cpp  lifecycle.cpp  setup.cpp  test.cpp  utils.cpp  utils.h  utils.hpp
Engine/src/actionSystem/: actionSet.cpp  actionSet.hpp  actionSystem.cpp  actionSystem.hpp  actionUtils.cpp  actionUtils.hpp  boolInputAction.cpp  boolInputAction.hpp  floatInputAction.cpp  floatInputAction.hpp  hapticOutputAction.cpp  hapticOutputAction.hpp  poseInputAction.cpp  poseInputAction.hpp  vec2InputAction.cpp  vec2InputAction.hpp
Engine/src/application/: application.cpp  application.h  application.hpp
Engine/src/assets/: assetCollection.cpp  assetCollection.hpp  assets.cpp  assets.h  assetsUtils.cpp  assetsUtils.hpp  bufferEngineAssets.cpp  bufferEngineAssets.hpp  engineAssets.cpp  engineAssets.hpp  image.cpp  image.hpp  imageSampler.cpp  imageSampler.hpp  material.cpp  material.hpp  materialEngineAssets.cpp  materialEngineAssets.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  modelEngineAssets.cpp  modelEngineAssets.hpp  pushConstantBuffer.cpp  pushConstantBuffer.hpp  pushConstantsBuffer.cpp  pushConstantsBuffer.hpp  sceneAsset.cpp  sceneAsset.h  shader.cpp  shader.hpp  shaderAsset.cpp  shaderAsset.h  shaderEngineAssets.cpp  shaderEngineAssets.hpp  shaderProperties.cpp  shaderProperties.hpp  shaderValues.cpp  shaderValues.hpp  (+4 more)
Engine/src/axrApplication/: axrApplication.cpp  axrApplication.hpp
Engine/src/common/: array.h  enums.cpp  extensionArray.h  handle.h  id.cpp  id.h  string.cpp  string.h  vector_stack.h
Engine/src/common/containers/: array.h  redBlackTree_pool.h  unorderedMap_dynamic.h  vectorBase.h  vector_dynamic.h  vector_stack.h
Engine/src/common/string/: path.cpp  path.h  string.cpp  string.h  stringIterator.cpp  stringIterator.h  stringView.cpp  stringView.h
Engine/src/debugInfo/: debugInfo.cpp  debugInfo.h
Engine/src/graphicsSystem/: graphicsSystem.cpp  graphicsSystem.hpp
Engine/src/graphicsSystem/vulkan/: vulkanBuffer.cpp  vulkanBuffer.hpp  vulkanExtensionCollection.hpp  vulkanGraphicsSystem.cpp  vulkanGraphicsSystem.hpp  vulkanImage.cpp  vulkanImage.hpp  vulkanQueueFamilies.cpp  vulkanQueueFamilies.hpp  vulkanRenderCommands.hpp  vulkanRenderStructs.hpp  vulkanSharedFunctions.cpp  vulkanSharedFunctions.hpp  vulkanSurfaceDetails.cpp  vulkanSurfaceDetails.hpp  vulkanUtils.cpp  vulkanUtils.hpp  vulkanWindowGraphics.cpp  vulkanWindowGraphics.hpp  vulkanXrGraphics.cpp  vulkanXrGraphics.hpp
Engine/src/inputSystem/: inputSystem.cpp  inputSystem.hpp
Engine/src/ioActionSystem/: boolInputAction.cpp  boolInputAction.hpp  floatInputAction.cpp  floatInputAction.hpp  ioActionSet.cpp  ioActionSet.hpp  ioActionSystem.cpp  ioActionSystem.hpp  ioActionUtils.cpp  ioActionUtils.hpp  vec2InputAction.cpp  vec2InputAction.hpp
Engine/src/ioActionsSystem/: boolInputAction.cpp  boolInputAction.hpp  floatInputAction.cpp  floatInputAction.hpp  ioActionSet.cpp  ioActionSet.hpp  ioActionsSystem.cpp  ioActionsSystem.hpp  vec2InputAction.cpp  vec2InputAction.hpp
Engine/src/memory/: allocator.cpp  allocator.h  doubleStackAllocator.cpp  doubleStackAllocator.h  dynamicAllocator.cpp  dynamicAllocator.h  memoryUtils.h  poolAllocator.h  stackAllocator.cpp  stackAllocator.h  subAllocator.cpp  subAllocator.h  subAllocatorBase.cpp  subAllocatorBase.h  types.h  utils.h
Engine/src/platform/: platform.cpp  platform.h  platform_wayland.cpp  platform_win32.cpp
Engine/src/renderer/: renderer.cpp  renderer.h  rendererUtils.h  types.h  utils.h
Engine/src/scene/: scene.cpp  scene.hpp  sceneUtils.cpp  sceneUtils.hpp
Engine/src/server/: server.cpp  server.h
Engine/src/utils/: stringUtils.cpp  stringUtils.hpp  vulkanUtils.cpp  vulkanUtils.hpp
Engine/src/windowSystem/: windowSystem.cpp  windowSystem.hpp
Engine/src/xrSystem/: xrExtensionFunctions.cpp  xrExtensionFunctions.hpp  xrSystem.cpp  xrSystem.hpp  xrUtils.cpp  xrUtils.hpp
Engine/tests/: main.cpp  test.cpp  utilsTests.cpp
Engine/tests/common/: array.cpp  extensionArray.cpp  extensionArrayTests.cpp  stringTests.cpp  vector_stack.cpp
Engine/tests/memory/: doubleStackAllocatorTests.cpp  dynamicAllocatorTests.cpp  memoryUtilsTests.cpp  poolAllocatorTests.cpp  stackAllocatorTests.cpp  utilsTests.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: shader.vert  shader.vert.spv
Sandbox/src/: alphaTestScene.cpp  alphaTestScene.hpp  entrypoint_linux.cpp  entrypoint_win32.cpp  libraryImplementations.cpp  main.cpp  sandbox.cpp  sandbox.h  sponzaScene.cpp  sponzaScene.hpp  testScene.cpp  testScene.hpp
Sandbox/src/common/: defines.h  defines.h.in
Sandbox/src/platform/: entrypoint_wayland.cpp  entrypoint_win32.cpp
cmake/: FindOpenXR.cmake
(+46 files in other folders)
